# LicenseDetector

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  README_DOCS.md  api.py  check_result.py  config_manager.py  docker-compose.prod.yml  docker-compose.yml  docker.ps1  docker.sh  license_risk.yaml  main.py  nginx.conf  prompts.yaml  pyproject.toml  start.sh  test_pypi_github_priority.py  view_log.py
.claude/: launch.json  settings.json  settings.local.json
.github/workflows/: deploy.yml
core/: __init__.py  archive_utils.py  config.py  crate_utils.py  email_utils.py  font_utils.py  github_api.py  github_utils.py  go_utils.py  googlesource_util.py  llm_provider.py  logging_utils.py  maven_utils.py  npm_utils.py  nuget_utils.py  pubdev_utils.py  pypi_utils.py  utils.py
docs/: API_USAGE.md  CHANGES.md  COMPLETION_REPORT.md  CONTAINERIZATION_REPORT.md  CRATE_IO_INTEGRATION.md  CRATE_QUICKSTART.md  DELIVERY_CHECKLIST.md  DOCKER.md  DOCKER_COMPLETE.md  DOCKER_GUIDE.md  DOCKER_QUICK_REF.md  FINAL_VERIFICATION.md  FONT_SCANNING.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md
scripts/: notify_deploy.py
static/: index.html
test/: test_archive_utils.py  test_component_license_locator.py  test_font_adapters.py  test_github_utils.py  test_go_utils.py  test_license_analysis.py  test_license_text.py  test_maven_analysis.py  test_npm_utils.py  test_utils.py  test_versioned_registry_fallback.py  verify_crate_integration.py  verify_installation.py  verify_versioned_registry_fallback.py
(+6 files in other folders)
